<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayoutFirst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/buttonBanner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/banner_test"
                android:textAllCaps="false"
                tools:ignore="ButtonStyle">
            </Button>

            <Button
                android:id="@+id/buttonInterstitial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:text="@string/interstitial_test"
                android:textAllCaps="false"
                tools:ignore="ButtonStyle">
            </Button>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutSecond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayoutFirst"
            android:layout_marginTop="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/buttonNative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/native_test"
                android:textAllCaps="false"
                tools:ignore="ButtonStyle">
            </Button>

            <Button
                android:id="@+id/buttonReward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:text="@string/reward_test"
                android:textAllCaps="false"
                tools:ignore="ButtonStyle">
            </Button>

        </LinearLayout>

        <com.google.android.gms.ads.NativeExpressAdView
            android:id="@+id/adViewNative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/adViewBanner"
            android:layout_marginBottom="20dp"
            ads:adSize="320x300"
            ads:adUnitId="@string/adNative">
        </com.google.android.gms.ads.NativeExpressAdView>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adViewBanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/adBanner">
        </com.google.android.gms.ads.AdView>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>